now, it's chireiden !

--- a/layout/_partial/_comment/DiscussBot.ejs
+++ b/layout/_partial/_comment/DiscussBot.ejs
@@ -1,5 +1,5 @@
 <style>
-  #nexmoe-content .nexmoe-comment {
+  #chireiden-content .chireiden-comment {
     background-color: #fff;
     border-top: 20px solid #f5f6f5;
   }
