--- a/layout/_partial/copyright.ejs
+++ b/layout/_partial/copyright.ejs
@@ -1,5 +1,5 @@
 <% if (page.hide_copyright !== true && theme.copyright || page.copyright) { %>
-    <div class="nexmoe-post-copyright">
+    <div class="chireiden-post-copyright">
         <strong><%- __('copyright.author') %>：</strong><%= config.author %><br>
         <strong><%- __('copyright.permalink') %>：</strong><%- link_to(page.permalink, page.permalink, {external: true}) %><br>
         <% if (page.copyright) { %>
