--- a/layout/_partial/paginator.ejs
+++ b/layout/_partial/paginator.ejs
@@ -1,8 +1,8 @@
 <% if (page.total > 1){ %>
-    <nav class="nexmoe-page-nav">
+    <nav class="chireiden-page-nav">
         <%- paginator({
-            prev_text: '<i class="nexmoefont icon-left"></i>',
-            next_text: '<i class="nexmoefont icon-right"></i>',
+            prev_text: '<i class="chireidenfont icon-left"></i>',
+            next_text: '<i class="chireidenfont icon-right"></i>',
             escape: false
         }) %>
     </nav>
