--- a/layout/_partial/searchbox.ejs
+++ b/layout/_partial/searchbox.ejs
@@ -1,5 +1,5 @@
 <% if (theme.widgets.includes('search')) { %> 
-    <div id="nexmoe-search-space">
+    <div id="chireiden-search-space">
         <div class="search-container">
             <div class="search-header">
                 <div class="search-input-container">
