--- a/layout/_widget/link.ejs
+++ b/layout/_widget/link.ejs
@@ -1,5 +1,5 @@
-<div class="nexmoe-widget-wrap">
-    <div class="nexmoe-widget nexmoe-link">
+<div class="chireiden-widget-wrap">
+    <div class="chireiden-widget chireiden-link">
 		<ul>
         <% if(theme.widgetLink){
             theme.widgetLink.forEach(widget => { %>
@@ -14,13 +14,13 @@
     </div>
 </div>
 <style>
-.nexmoe-widget-wrap .nexmoe-link ul li a {
+.chireiden-widget-wrap .chireiden-link ul li a {
     text-align : center;
 }
-.nexmoe-widget-wrap .nexmoe-link ul li a img {
+.chireiden-widget-wrap .chireiden-link ul li a img {
     max-width : 200px;
 }
-.nexmoe-widget-wrap .nexmoe-link ul li a p {
+.chireiden-widget-wrap .chireiden-link ul li a p {
     margin: 10px 0;
 }
 </style>
