--- a/layout/_widget/search.ejs
+++ b/layout/_widget/search.ejs
@@ -1,5 +1,5 @@
-<div class="nexmoe-widget-wrap">
-    <div class="nexmoe-widget nexmoe-search">
+<div class="chireiden-widget-wrap">
+    <div class="chireiden-widget chireiden-search">
         <% if (theme.search.type=='engine') { %> 
             <form id="search_form" action_e="<%= theme.search.url %>" onsubmit="return search();">
                 <label><input id="search_value" name="q" type="search" placeholder="<%= __('search') %>"></label>
