--- a/layout/py.ejs
+++ b/layout/py.ejs
@@ -1,9 +1,9 @@
-<div class="nexmoe-post">
-	<article class="nexmoe-py">
+<div class="chireiden-post">
+	<article class="chireiden-py">
 		<%- page.content %>
 	</article>
 	<% if (page.comments){ %>
-        <div class="nexmoe-post-footer">
+        <div class="chireiden-post-footer">
             <%- theme.comment ? partial('_partial/comment') : '' %>
         </div>
     <% } %>
