--- a/source/css/_partial/archives.styl
+++ b/source/css/_partial/archives.styl
@@ -1,14 +1,14 @@
-.nexmoe-archives .tagcloud {
+.chireiden-archives .tagcloud {
     margin-bottom: 13px;
     font-size: 0;
 }
 
-.nexmoe-archives .categories {
+.chireiden-archives .categories {
     margin-bottom: 12px;
     font-size: 0;
 }
 
-.nexmoe-archives .tagcloud a {
+.chireiden-archives .tagcloud a {
     border-radius: 15px;
     padding: 6px 12px;
     font-size: 15px !important;
@@ -17,15 +17,15 @@
     margin-right: 7px;
 }
 
-.nexmoe-archives .tagcloud a:before {
+.chireiden-archives .tagcloud a:before {
     content: '# ';
 }
 
-.nexmoe-archives .tagcloud a span:before {
+.chireiden-archives .tagcloud a span:before {
     content: ' ';
 }
 
-.nexmoe-archives .categories a {
+.chireiden-archives .categories a {
     border-radius: 12px;
     padding: 12px;
     font-size: 16px;
@@ -37,11 +37,11 @@
     position: relative;
 }
 
-.nexmoe-archives .categories a:nth-child(3n+3) {
+.chireiden-archives .categories a:nth-child(3n+3) {
     margin-right: 0;
 }
 
-.nexmoe-archives .categories a .bg {
+.chireiden-archives .categories a .bg {
     background-size: cover;
     background-position: center center;
     top: 0;
@@ -52,7 +52,7 @@
     opacity: 0.8;
 }
 
-.nexmoe-archives .categories a:before {
+.chireiden-archives .categories a:before {
     top: 0;
     left: 0;
     content: '';
@@ -63,7 +63,7 @@
     z-index: 1;
 }
 
-.nexmoe-archives .categories a h1 {
+.chireiden-archives .categories a h1 {
     margin: 20px;
     position: absolute;
     bottom: 0;
@@ -72,48 +72,48 @@
 }
 
 @media screen and (max-width: 768px) {
-    .nexmoe-archives .categories a {
+    .chireiden-archives .categories a {
         width: calc(50% - 6px);
     }
 
-    .nexmoe-archives .categories a:nth-child(3n+3) {
+    .chireiden-archives .categories a:nth-child(3n+3) {
         margin-right: 12px;
     }
 
-    .nexmoe-archives .categories a:nth-child(2n+2) {
+    .chireiden-archives .categories a:nth-child(2n+2) {
         margin-right: 0;
     }
 }
 
-.nexmoe-archives .categories a span {
+.chireiden-archives .categories a span {
     margin-top: 5px;
     display: block;
 }
 
-.nexmoe-archives .categories a span:after {
+.chireiden-archives .categories a span:after {
     content: ' Articles';
 }
 
-.nexmoe-archives article > *:first-child {
+.chireiden-archives article > *:first-child {
     margin-top: 0;
 }
 
-.nexmoe-archives article > *:last-child {
+.chireiden-archives article > *:last-child {
     margin-bottom: 0;
 }
 
-.nexmoe-archives ul {
+.chireiden-archives ul {
     list-style: none;
     padding-left: 0 !important;
 }
 
-.nexmoe-archives li {
+.chireiden-archives li {
     position: relative;
     padding: 10px 0;
     padding-left: 25px;
 }
 
-.nexmoe-archives li::before {
+.chireiden-archives li::before {
     content: '';
     width: 14px;
     height: 14px;
@@ -129,7 +129,7 @@
     position: relative;
 }
 
-.nexmoe-archives li::after {
+.chireiden-archives li::after {
     content: '';
     height: 100%;
     width: 2px;
@@ -139,10 +139,10 @@
     top: 20px;
 }
 
-.nexmoe-archives li:last-child:after {
+.chireiden-archives li:last-child:after {
     display: none;
 }
 
-.nexmoe-archives ul span {
+.chireiden-archives ul span {
     margin-right: 15px;
 }
