--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -127,40 +127,40 @@ article del {
 	font-size: 0.9em;
 }
 
-article > table.nexmoe-album {
+article > table.chireiden-album {
 	margin: -5px;
 	max-width: calc(100% + 10px);
 }
 
-article > table.nexmoe-album + .nexmoe-album {
+article > table.chireiden-album + .chireiden-album {
 	margin-top: 5px;
 }
 
-article > table.nexmoe-album, article > table.nexmoe-album thead, article > table.nexmoe-album th, article > table.nexmoe-album td {
+article > table.chireiden-album, article > table.chireiden-album thead, article > table.chireiden-album th, article > table.chireiden-album td {
 	border: none;
 	box-shadow: none;
 }
 
-article > table.nexmoe-album * {
+article > table.chireiden-album * {
 	background-color: transparent !important;
 }
 
-article > table.nexmoe-album th, article > table.nexmoe-album td {
+article > table.chireiden-album th, article > table.chireiden-album td {
 	padding: 5px;
 	height: 300px;
 }
 
-article > table.nexmoe-album th a:after, article > table.nexmoe-album td a:after {
+article > table.chireiden-album th a:after, article > table.chireiden-album td a:after {
 	display: none;
 }
 
 @media screen and (max-width: 1024px) {
-	article > table.nexmoe-album th, article > table.nexmoe-album td {
+	article > table.chireiden-album th, article > table.chireiden-album td {
 		height: 100px;
 	}
 }
 
-article > table.nexmoe-album img {
+article > table.chireiden-album img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
