--- a/source/css/_partial/py.styl
+++ b/source/css/_partial/py.styl
@@ -1,8 +1,8 @@
-article.nexmoe-py > *:first-child {
+article.chireiden-py > *:first-child {
     margin-top: 0 !important;
 }
 
-article.nexmoe-py ul {
+article.chireiden-py ul {
     list-style-type: none;
     padding: 0;
     display: flex;
@@ -11,7 +11,7 @@ article.nexmoe-py ul {
     margin: -5px;
 }
 
-article.nexmoe-py ul li {
+article.chireiden-py ul li {
     transition: all 0.03s;
     width: calc(14.285714285714286% - 10px);
     margin: 5px;
@@ -22,17 +22,17 @@ article.nexmoe-py ul li {
     padding: 0 !important;
 }
 
-article.nexmoe-py ul li:before, article.nexmoe-py ul li:after {
+article.chireiden-py ul li:before, article.chireiden-py ul li:after {
     display: none;
 }
 
-article.nexmoe-py ul li > a {
+article.chireiden-py ul li > a {
     padding-top: 100%;
     display: block;
     position: relative;
 }
 
-article.nexmoe-py ul li > a:before {
+article.chireiden-py ul li > a:before {
     background-image: -moz-linear-gradient(to top, rgba(16, 16, 16, 0.35) 25%, rgba(16, 16, 16, 0) 100%);
     background-image: -webkit-linear-gradient(to top, rgba(16, 16, 16, 0.35) 25%, rgba(16, 16, 16, 0) 100%);
     background-image: -ms-linear-gradient(to top, rgba(16, 16, 16, 0.35) 25%, rgba(16, 16, 16, 0) 100%);
@@ -53,7 +53,7 @@ article.nexmoe-py ul li > a:before {
     opacity: 0.8;
 }
 
-article.nexmoe-py ul li > a::after {
+article.chireiden-py ul li > a::after {
     font-size: 13px;
     color: #fff;
     -webkit-transition: none;
@@ -72,7 +72,7 @@ article.nexmoe-py ul li > a::after {
     z-index: 2;
 }
 
-article.nexmoe-py ul li img {
+article.chireiden-py ul li img {
     width: 100%;
     border-radius: 0;
     border: none;
@@ -84,7 +84,7 @@ article.nexmoe-py ul li img {
 }
 
 @media screen and (max-width: 768px) {
-    article.nexmoe-py ul li {
+    article.chireiden-py ul li {
         width: calc(33.3333333333% - 10px);
     }
 }
