--- a/source/css/_widget/hitokoto.styl
+++ b/source/css/_widget/hitokoto.styl
@@ -1,5 +1,5 @@
-.nexmoe-widget-wrap {
-    .nexmoe-widget {
+.chireiden-widget-wrap {
+    .chireiden-widget {
         // 文字滚动，从 https://juejin.cn/post/6844904165446156302 复制
         .hitokoto-box {
             margin: 0 auto;
