--- a/layout/_partial/_post/meta.ejs
+++ b/layout/_partial/_post/meta.ejs
@@ -1,3 +1,3 @@
-<div class="nexmoe-post-meta nexmoe-rainbow" style="margin:10px 0!important;">
-    <a><i class="nexmoefont icon-calendar-fill"></i><%- date(page.date, "YYYY年MM月DD日") %></a>
+<div class="chireiden-post-meta chireiden-rainbow" style="margin:10px 0!important;">
+    <a><i class="chireidenfont icon-calendar-fill"></i><%- date(page.date, "YYYY年MM月DD日") %></a>
 </div>
