--- a/layout/_partial/_post/tag.ejs
+++ b/layout/_partial/_post/tag.ejs
@@ -1,8 +1,8 @@
-<div class="nexmoe-post-meta nexmoe-rainbow">
+<div class="chireiden-post-meta chireiden-rainbow">
     <% if (page.categories && page.categories.length){ %>
         <%- list_categories(page.categories, {
             show_count: false,
-            class: 'nexmoefont icon-appstore-fill ',
+            class: 'chireidenfont icon-appstore-fill ',
             style: 'none',
             separator: ''
         }) %>
@@ -10,7 +10,7 @@
     <% if (page.tags && page.tags.length){ %>
         <%- list_tags(page.tags, {
             show_count: false,
-            class: 'nexmoefont icon-tag-fill ',
+            class: 'chireidenfont icon-tag-fill ',
             style: 'none',
             separator: ' '
         }) %>
