--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,18 +1,18 @@
-<div class="nexmoe-drawer mdui-drawer" id="drawer">
-    <div class="nexmoe-avatar mdui-ripple">
+<div class="chireiden-drawer mdui-drawer" id="drawer">
+    <div class="chireiden-avatar mdui-ripple">
         <a href="<%- url_for() %>" title="<%= config.author || config.title %>">
             <img src="<%= theme.avatar %>" alt="<%= config.author || config.title %>" alt="<%= config.author || config.title %>">
         </a>
     </div>
-    <div class="nexmoe-count">
+    <div class="chireiden-count">
         <div><span><%= __('count.articles') %></span><%= site.posts.length %></div>
         <div><span><%= __('count.tags') %></span><%= site.tags.length %></div>
         <div><span><%= __('count.categories') %></span><%= site.categories.length %></div>
     </div>
-    <div class="nexmoe-list mdui-list" mdui-collapse="{accordion: true}">
+    <div class="chireiden-list mdui-list" mdui-collapse="{accordion: true}">
         <% for (name in theme.menu) { %>
-        <a class="nexmoe-list-item mdui-list-item mdui-ripple <%= is_current(theme.menu[name][0]) %>" href="<%- url_for(theme.menu[name][0]) -%>" title="<%= name %>">
-            <i class="mdui-list-item-icon nexmoefont <% if (theme.menu[name][1]){ %><%= theme.menu[name][1] %><%} else{ %><%= 'icon-unorderedlist' %><% } %>"></i>
+        <a class="chireiden-list-item mdui-list-item mdui-ripple <%= is_current(theme.menu[name][0]) %>" href="<%- url_for(theme.menu[name][0]) -%>" title="<%= name %>">
+            <i class="mdui-list-item-icon chireidenfont <% if (theme.menu[name][1]){ %><%= theme.menu[name][1] %><%} else{ %><%= 'icon-unorderedlist' %><% } %>"></i>
             <div class="mdui-list-item-content">
                 <%= name %>
             </div>
@@ -20,10 +20,10 @@
         <% } %>
     </div>
     <%- partial('_partial/sidebar') %>
-    <div class="nexmoe-copyright">
+    <div class="chireiden-copyright">
         &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
         <%= __('Powered by') %> <a href="http://hexo.io/" target="_blank">Hexo</a>
-        & <a href="https://github.com/theme-nexmoe/hexo-theme-nexmoe" target="_blank">Nexmoe</a>
+        & <a href="https://github.com/theme-chireiden/hexo-theme-chireiden" target="_blank">Chireiden</a>
         <%- theme.sidebar %>
     </div>
-</div><!-- .nexmoe-drawer -->
+</div><!-- .chireiden-drawer -->
