--- a/layout/_partial/sidebar.ejs
+++ b/layout/_partial/sidebar.ejs
@@ -1,4 +1,4 @@
-<aside id="nexmoe-sidebar">
+<aside id="chireiden-sidebar">
     <% theme.widgets.forEach(function(widget){ %>
     <%- partial('_widget/' + widget) %>
     <% }) %>
