--- a/layout/_widget/archive.ejs
+++ b/layout/_widget/archive.ejs
@@ -1,7 +1,7 @@
 <% if (site.posts.length){ %>
-  <div class="nexmoe-widget-wrap">
-    <h3 class="nexmoe-widget-title"><%= __('archive') %></h3>
-    <div class="nexmoe-widget">
+  <div class="chireiden-widget-wrap">
+    <h3 class="chireiden-widget-title"><%= __('archive') %></h3>
+    <div class="chireiden-widget">
       <%- list_archives({show_count: theme.widgetAchive.show_count, type: theme.widgetAchive.archive_type}) %>
     </div>
   </div>
