--- a/layout/_widget/hitokoto.ejs
+++ b/layout/_widget/hitokoto.ejs
@@ -1,10 +1,10 @@
 <!-- 一言 -->
 <% if (theme.widgets.includes('hitokoto')){ %>
-  <div class="nexmoe-widget-wrap">
-    <h3 class="nexmoe-widget-title">
+  <div class="chireiden-widget-wrap">
+    <h3 class="chireiden-widget-title">
       <%= __('hitokoto') %>
     </h3>
-    <div class="nexmoe-widget">
+    <div class="chireiden-widget">
       <ul class="hitokoto-box">
         <li id="hitokoto_text_parent" class="hitokoto-text" hitokotoCategory="<%= theme.widgetHitokoto.category %>">
           <a href="#" id="hitokoto_text">
