--- a/layout/_widget/recent_posts.ejs
+++ b/layout/_widget/recent_posts.ejs
@@ -1,7 +1,7 @@
 <% if (site.posts.length){ %>
-  <div class="nexmoe-widget-wrap">
-    <h3 class="nexmoe-widget-title"><%= __('recent_posts') %></h3>
-    <div class="nexmoe-widget">
+  <div class="chireiden-widget-wrap">
+    <h3 class="chireiden-widget-title"><%= __('recent_posts') %></h3>
+    <div class="chireiden-widget">
       <ul>
         <% site.posts.sort('date', -1).limit(5).each(function(post){ %>
           <li>
