--- a/layout/_widget/tag.ejs
+++ b/layout/_widget/tag.ejs
@@ -1,7 +1,7 @@
 <% if (site.tags.length){ %>
-  <div class="nexmoe-widget-wrap">
-    <h3 class="nexmoe-widget-title"><%= __('tags') %></h3>
-    <div class="nexmoe-widget">
+  <div class="chireiden-widget-wrap">
+    <h3 class="chireiden-widget-title"><%= __('tags') %></h3>
+    <div class="chireiden-widget">
       <%- list_tags({show_count: theme.widgetAchive.show_count}) %>
     </div>
   </div>
