--- a/layout/_widget/tagcloud.ejs
+++ b/layout/_widget/tagcloud.ejs
@@ -1,6 +1,6 @@
 <% if (site.tags.length){ %>
-  <div class="nexmoe-widget-wrap">
-    <div id="randomtagcloud" class="nexmoe-widget tagcloud nexmoe-rainbow">
+  <div class="chireiden-widget-wrap">
+    <div id="randomtagcloud" class="chireiden-widget tagcloud chireiden-rainbow">
       <%- tagcloud() %>
     </div>
     <% if (theme.maxTagcloud){ %>
