--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,26 +1,26 @@
-<section class="nexmoe-posts">
+<section class="chireiden-posts">
     <% page.posts.each(function (page) { %>
-    <div class="nexmoe-post">
+    <div class="chireiden-post">
         <a href="<%- url_for(page.path) %>">
             <% if (page.cover){ %>
-                <div class="nexmoe-post-cover mdui-ripple" style="padding-bottom: <%- page.coverHeight/page.coverWidth*100 %>%;"> 
+                <div class="chireiden-post-cover mdui-ripple" style="padding-bottom: <%- page.coverHeight/page.coverWidth*100 %>%;"> 
                     <img src="<%- page.cover %>" alt="<%= page.title %>" loading="lazy">
                     <h1><%= page.title %></h1>
                 </div>
             <%}  else{ %>
-                <div class="nexmoe-post-cover mdui-ripple" style="padding-bottom: <%- theme.background.height/theme.background.width*100 %>%;"> 
+                <div class="chireiden-post-cover mdui-ripple" style="padding-bottom: <%- theme.background.height/theme.background.width*100 %>%;"> 
                     <img src="<%- theme.background.path %>" alt="<%= page.title %>" loading="lazy">
                     <h1><%= page.title %></h1>
                 </div>
             <% } %>
         </a>
 
-        <div class="nexmoe-post-meta nexmoe-rainbow">
-            <a><i class="nexmoefont icon-calendar-fill"></i><%- date(page.date, "YYYY年MM月DD日") %></a>
+        <div class="chireiden-post-meta chireiden-rainbow">
+            <a><i class="chireidenfont icon-calendar-fill"></i><%- date(page.date, "YYYY年MM月DD日") %></a>
             <% if (page.categories && page.categories.length){ %>
                 <%- list_categories(page.categories, {
                     show_count: false,
-                    class: 'nexmoefont icon-appstore-fill ',
+                    class: 'chireidenfont icon-appstore-fill ',
                     style: 'none',
                     separator: ''
                 }) %>
@@ -28,7 +28,7 @@
             <% if (page.tags && page.tags.length){ %>
                 <%- list_tags(page.tags, {
                     show_count: false,
-                    class: 'nexmoefont icon-tag-fill ',
+                    class: 'chireidenfont icon-tag-fill ',
                     style: 'none',
                     separator: ' '
                 }) %>
