--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -1,13 +1,13 @@
-<div class="nexmoe-post">
+<div class="chireiden-post">
 
   <article>
       <% if (page.cover){ %>
-          <div class="nexmoe-post-cover" style="padding-bottom: <%- page.coverHeight/page.coverWidth*100 %>%;"> 
+          <div class="chireiden-post-cover" style="padding-bottom: <%- page.coverHeight/page.coverWidth*100 %>%;"> 
               <img src="<%- page.cover %>" alt="<%= page.title %>" loading="lazy">
               <h1><%= page.title %></h1>
           </div>
       <%}  else{ %>
-          <div class="nexmoe-post-cover" style="padding-bottom: <%- theme.background.height/theme.background.width*100 %>%;"> 
+          <div class="chireiden-post-cover" style="padding-bottom: <%- theme.background.height/theme.background.width*100 %>%;"> 
               <img data-fancybox="gallery" src="<%- theme.background.path %>" alt="<%= page.title %>" loading="lazy">
               <h1><%= page.title %></h1>
           </div>
@@ -27,7 +27,7 @@
   <%- partial('_partial/_post/tag') %>
 
   <% if (page.comments){ %>
-      <div class="nexmoe-post-footer">
+      <div class="chireiden-post-footer">
           <%- theme.comment ? partial('_partial/comment') : '' %>
       </div>
   <% } %>
