allow post without cover image

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -435,6 +435,10 @@ body {
                 width: 100%;
                 z-index: -1;
             }
+
+            h1.no-gradient-h1:after {
+                opacity: 0;
+            }
         }
 
         .chireiden-post-meta {
