--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -8,9 +8,8 @@
                     <h1><%= page.title %></h1>
                 </div>
             <%}  else{ %>
-                <div class="chireiden-post-cover mdui-ripple" style="padding-bottom: <%- theme.background.height/theme.background.width*100 %>%;"> 
-                    <img src="<%- theme.background.path %>" alt="<%= page.title %>" loading="lazy">
-                    <h1><%= page.title %></h1>
+                <div class="chireiden-post-cover mdui-ripple" style="padding-bottom: 2em;"> 
+                    <h1 class="no-gradient-h1" style="color: black;"><%= page.title %></h1>
                 </div>
             <% } %>
         </a>
