--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -6,6 +6,11 @@
               <img src="<%- page.cover %>" alt="<%= page.title %>" loading="lazy">
               <h1><%= page.title %></h1>
           </div>
+      <%}  else{ %>
+          <div class="chireiden-post-cover" style="padding-bottom: 2em;"> 
+              <!-- <img data-fancybox="gallery" src="<%- theme.background.path %>" alt="<%= page.title %>" loading="lazy"> -->
+              <h1 class="no-gradient-h1"><%= page.title %></h1>
+          </div>
       <% } %>
       
       <%- partial('_partial/_post/meta') %>
