--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -439,6 +439,9 @@ body {
             h1.no-gradient-h1:after {
                 opacity: 0;
             }
+            h1.no-gradient-h1 {
+                color: black;
+            }
         }
 
         .chireiden-post-meta {
