--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -27,7 +27,7 @@ article code::-webkit-scrollbar-thumb {
 
 .highlight {
 	padding: 0 0.5em;
-	background: #282c34;
+	background: #0d1117;
 	color: #abb2bf;
 	margin: 25px 0;
 	border-radius: var(--radius);
@@ -46,13 +46,13 @@ article pre {
 	margin: 0;
 	padding: 15px 6px 15px 0;
 	position: relative;
-	background: #282c34;
+	background: #0d1117;
 	line-height: 1.3em;
 }
 
 article pre::before {
 	// content: "";
-	background: #282c34;
+	background: #0d1117;
 	height: 32px;
 	margin-bottom: 0;
 	display: block;
@@ -92,7 +92,7 @@ article pre code:after {
 	overflow: hidden;
 	padding: 1px 0;
 	padding-left: 12px;
-	background: #282c34;
+	background: #0d1117;
 }
 
 article a {
