--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -42,7 +42,7 @@
     <% if (config.highlight.hljs) { %>
         <link rel="stylesheet"
             href="//cdn.bootcss.com/highlight.js/11.0.1/styles/github-dark.min.css">
-        <script src="//cdn.bootcss.com/highlight.js/11.0.1/highlight.js">
+        <script src="//cdn.bootcss.com/highlight.js/11.0.1/highlight.min.js">
         </script>
         <script>
             hljs.initHighlightingOnLoad();
